// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log should render alert in case of error in query 1`] = `
<strong
  className="typography__AlertText-sc-1yq3b4j-4 btUKpF"
>
  Tapahtui odottamaton virhe, emmekä juuri nyt pysty näyttämään tietoja.
</strong>
`;

exports[`Log should render with empty log 1`] = `
<div>
  <div
    className="Log__NotificationText-sc-1asjtoe-0 fHwHNR"
  >
    <p>
      Tällä sivulla näytetään toimijat, jotka ovat käyttäneet opinto- ja varhaiskasvatustietojasi.
    </p>
    <p>
      Sivu on tyhjä, koska tietojasi ei ole vielä käytetty.**
    </p>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/koski-palvelun-tietosuojaseloste"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
    </div>
  </div>
</div>
`;

exports[`Log should render with non-empty log 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 gCmkXl"
  >
    <div>
      Tietojen käyttäjä
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 CwMSI"
    >
      Käytetty tietovaranto
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Opintosuoritukset (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Varhaiskasvatuksen tietovaranto (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/koski-palvelun-tietosuojaseloste"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language en 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 gCmkXl"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 CwMSI"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Organization 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        The national data warehouse for early childhood education and care Varda
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/koski-palvelun-tietosuojaseloste"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language sv 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 gCmkXl"
  >
    <div>
      Uppgiftsanvändare
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 CwMSI"
    >
      Använt informationsresurs
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Organisation 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Studieprestationer (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Informationsresursen inom småbarnspedagogik (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Gäller tills vidare endast studieuppgifter och uppgifter om småbarnspedagogik, dvs. inte uppgifter som ingår i ansökningar. I 
      <a
        className="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/koski-palvelun-tietosuojaseloste"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          dataskyddsbeskrivningen
        </b>
      </a>
       får du information om grunderna för användning av personuppgifter i ansökningarna och hur de kan överlåtas.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Här visas de aktörer som använt dina uppgifter enligt informationsresurs:
      <br />
      Studieprestationer (KOSKI)
       - 
      fr.o.m. 14.11.2018
      <br />
      Informationsresursen inom småbarnspedagogik (Varda)
       - 
      fr.o.m. 28.4.2023
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and organization with no English name 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 gCmkXl"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 CwMSI"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/koski-palvelun-tietosuojaseloste"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 gpyOWC"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 hlClvk"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
    </div>
  </div>,
]
`;
